Use YouTube api instead of own video implementation
* small angular directive embeds youtube content and sends state change events to server
* video tab in author mode not needed anymore
* video controller in api not needed anymore
* adapt swagger spec
