# api/models/watch.js
@@ -1,0 +1,23 @@
+'use strict';
+const mongoose=require('mongoose');
+module.exports = mongoose.Schema({
+  state: {
+    type: String,
+    required: true
+  },
+  time: {
+    type: Number,
+    required: true
+  },
+  videoid: String,
+  listType: {
+    type: String,
+    enum: ['playlist', 'search', 'user']
+  },
+  list: String,
+  user: {
+    ref: 'users',
+    type: mongoose.Schema.Types.ObjectId,
+    required: true
+  }
+});
