# api/swagger.yml
@@ -215,63 +215,38 @@ paths:
           schema:
             type: array
             items: {$ref: '#/definitions/Subject'}
-  /videos:
-    get:
-      summary: Get list of video files
-      parameters:
-        - name: search
-          description: a string to search for in filenames
-          in: query
-          type: string
-        - name: me
-          description: Search only in files created by current user
-          in: query
-          type: boolean
-      responses:
-        200:
-          description: A list of video file items
-          schema:
-            type: array
-            items: {$ref: '#/definitions/File'}
+  /watches:
     post:
-      summary: Upload a new video file
+      summary: create a new watch item
       parameters:
-        - name: video
-          in: formData
-          type: file
+        - name: message
+          in: body
           required: true
-      consumes:
-        - multipart/form-data
+          schema: {$ref: '#/definitions/Watch'}
       responses:
         200: {$ref: '#/responses/ok'}
-  /videos/{_id}:
-    parameters:
-      - {$ref: '#/parameters/_id'}
-    get:
-      summary: Get video file by _id
-      parameters:
-        - name: metadata
-          description: Return gridfs file object
-          in: query
-          type: boolean
-        - name: range
-          description: A range header
-          in: header
-          type: string
-          required: true
-      responses:
-        200:
-          description: A gridfs file object
-          schema: {$ref: '#/definitions/File'}
-        206:
-          description: A partial video file requested by range header
-          schema: {type: string}
-      produces:
-        - video/*
 definitions:
   ObjectId:
     type: string
     pattern: /^[0-9a-fA-F]{24}$/
+  Watch:
+    type: object
+    required:
+      - _id
+      - state
+      - time
+    properties:
+      _id: {$ref: '#/definitions/ObjectId'}
+      time: {type: number}
+      state: {type: string}
+      videoid: {type: string}
+      list: {type: string}
+      listType:
+        type: string
+        enum:
+          - playlist
+          - search
+          - user
   File:
     type: object
     description: A mongodb gridfs file object
